tests/lean/num3.lean.expected.out
@eq N a z : Prop
num3.lean:14:12: error: invalid type ascription, expression has type
  N
but is expected to have type
  num
@eq num 2 1 : Prop
@eq num 2 1 : Prop
